sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/Waste_Collection_Schedule__c.object-meta.xml
<CustomObject>
    <label>Waste Collection Schedule</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Waste Collection Schadule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waste Collection Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>