sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Do Not Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>