sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/fields/Missed_Collection_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Explanation__c</fullName>
    <label>Missed Collection Explanation</label>
    <type>TextArea</type>
</CustomField>