sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/fields/Missed_Collection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missed Collection Reason</label>
    <referenceTo>Missed_Collection_Reason__c</referenceTo>
    <relationshipLabel>Waste Collection Schedules</relationshipLabel>
    <relationshipName>Waste_Collection_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>