sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>