sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Waste Collection Schedules</relationshipLabel>
    <relationshipName>Waste_Collection_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>