sfSandBoxCode/force-app/main/default/objects/Waste_Collection_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection_Date__c</columns>
    <columns>Toilet__c</columns>
    <columns>Urine_Weight__c</columns>
    <columns>Solid_Waste_Weight__c</columns>
    <columns>Missed_Collection_Reason__c</columns>
    <columns>Missed_Collection_Explanation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>